<resources>
    <string name="app_name">Marketplace Inc.</string>
    <string name="reasonable_with_us">Reasonable with us!</string>
    <string name="app_desc">Marketplace Inc. is a place where you can sell and buy what you want reasonably.</string>
    <string name="sign_in">Sign In:</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password:</string>
    <string name="addition">The best shop system you know!</string>
    <string name="sign_in_2">Sign in</string>
    <string name="txt_to_sign_up">Don\'t have an account? Sign up <font color="#403DD1">here</font>.</string>
    <string name="sign_up">Sign Up:</string>
    <string name="repeat_your_password">Repeat your password:</string>
    <string name="txt_to_sign_in">Already have an account? Sign in <font color="#403DD1">here</font>.</string>
    <string name="sign_up_2">Sign up</string>
    <string name="some_more_info_about_you">Some more info about you:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="txt_remark">We value your time and money!</string>
    <string name="choose_your_city">Choose your city:</string>
    <string name="finish">Finish</string>

    <string-array name="cities">
        <item>Tashkent</item>
        <item>Namangan</item>
        <item>Samarkand</item>
        <item>Andijan</item>
        <item>Nukus</item>
        <item>Fergana</item>
        <item>Bukhara</item>
        <item>Qarshi</item>
        <item>Kokand</item>
        <item>Margilan</item>
        <item>Angren</item>
        <item>Termez</item>
        <item>Jizzakh</item>
        <item>Chirchiq</item>
        <item>Navoiy</item>
        <item>Urgench</item>
        <item>Shahrisabz</item>
        <item>Olmaliq</item>
    </string-array>

    <string-array name="categories">
        <item>Food Products</item>
        <item>Clothes</item>
        <item>Home Appliances</item>
        <item>Mobile Phones</item>
        <item>PCs and Laptops</item>
        <item>Books</item>
        <item>Plants</item>
        <item>Car Products</item>
        <item>Office Products</item>
        <item>Decorations</item>
        <item>Cleaning Products</item>
    </string-array>

    <string-array name="currency">
        <item>Sum</item>
        <item>Dollars</item>
        <item>Euros</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_profile">Your profile:</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories:</string>
    <string name="food_products">Food Products</string>
    <string name="clothes">Clothes</string>
    <string name="home_products">Home Products</string>
    <string name="technology">Technology</string>
    <string name="gadgets">Gadgets</string>
    <string name="books">Books</string>
    <string name="on_sale_for_you">On Sale for you:</string>
    <string name="search">Search:</string>
    <string name="your_cart">Your cart:</string>
    <string name="contact_the_seller">Contact the seller</string>
    <string name="add_an_item_for_sale">Add an item for sale:</string>
    <string name="fill_in_the_information">Fill in the information:</string>
    <string name="about">About:</string>
    <string name="category">Category</string>
    <string name="price">Price:</string>
    <string name="your_phone_number">Your phone number:</string>
    <string name="post">Post</string>
    <string name="choose_your_category">Choose your category:</string>
    <string name="your_posts">Your posts</string>
    <string name="your_posts1">Your posts:</string>
    <string name="you_don_t_have_any_posts">You don\'t have any posts.</string>
</resources>