<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_gray"
    tools:context=".mainfragments.SearchFragment">

    <TextView
        android:id="@+id/txt_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/search"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:src="@drawable/ic_menu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/edittext_style"
        android:elevation="@dimen/_5sdp"
        android:hint="@string/search"
        android:paddingHorizontal="@dimen/_9sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toBottomOf="@id/txt_search_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_search">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_food"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:elevation="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/food_products"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_clothes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/clothes"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_home_products"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/home_products"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_tech"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/technology"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_gadgets"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/gadgets"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_books"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:elevation="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/books"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>